added CHANGELOG.md